openvidu-server: remove KmsManager getter only used in test